added structure of project

--- a/task_2/data/Answers_for_2nd_lab.ipynb
+++ b/task_2/data/Answers_for_2nd_lab.ipynb
@@ -14,7 +14,7 @@
    "source": [
     "# Теория по 2 ЛР:\n",
     "\n",
-    "## 1. Определение Python, со всеми пояснениями\n",
+    "## 1. Определение Python со всеми пояснениями\n",
     "\n",
     "**Python** — **высокоуровневый язык программирования** **общего назначения** с **динамической строгой неявной типизацией** и\n",
     "**автоматическим управлением памятью**. Поддерживает **утиную типизацию**.\n",
@@ -65,7 +65,11 @@
   {
    "cell_type": "markdown",
    "id": "dc4568d0",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## 2. Типы данных и их свойства\n",
     "<p><a href=\"https://commons.wikimedia.org/wiki/File:Python_3._The_standard_type_hierarchy.png#/media/Файл:Python_3._The_standard_type_hierarchy.png\"><img src=\"https://upload.wikimedia.org/wikipedia/commons/1/10/Python_3._The_standard_type_hierarchy.png\" alt=\"Python 3. The standard type hierarchy.png\"></a><br>\n",
@@ -75,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "862e0001",
    "metadata": {
     "pycharm": {
@@ -166,14 +170,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "3ec5f368",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4433132000\n",
+      "4433132032\n"
+     ]
+    }
+   ],
    "source": [
     "a = 5\n",
     "print(id(a))\n",
@@ -184,14 +197,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "96647a56",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "140476860891520\n",
+      "140476860891520\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = [1, 2, 3]\n",
     "print(id(list1))\n",
@@ -216,23 +238,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "57b49694",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Student Name: Jonathan\n",
+      "100 95 88 92 99 \n",
+      "\n",
+      "Owner Name: Jonathan\n",
+      "dog: Brock\n",
+      "fish: ['Larry', 'Curly', 'Moe']\n",
+      "turtle: Shelldon\n"
+     ]
+    }
+   ],
    "source": [
     "# args\n",
     "def print_scores(student, *scores):\n",
     "   print(f\"Student Name: {student}\")\n",
     "   for score in scores:\n",
-    "      print(score)\n",
+    "      print(score, end = \" \")\n",
     "    \n",
     "    \n",
-    "print_scores(\"Jonathan\",100, 95, 88, 92, 99)\n",
+    "print_scores(\"Jonathan\", 100, 95, 88, 92, 99)\n",
     "print(\"\\n\")\n",
     "\n",
     "# kwargs\n",
@@ -292,14 +328,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "d20a6fb2",
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Функция range()\n",
+      "[-10, -7, -4, -1, 2, 5, 8]\n",
+      "Функция filter()\n",
+      "[-10, -4, 2, 8]\n",
+      "Функция zip()\n",
+      "[(-10, 0), (-7, 1), (-4, 2), (-1, 3), (2, 4), (5, 5), (8, 6)]\n",
+      "Функция map()\n",
+      "[10, 7, 4, 1, 2, 5, 8]\n",
+      "Функция sorted()\n",
+      "[8, 5, 2, -1, -4, -7, -10]\n",
+      "Функция any()\n",
+      "True\n",
+      "Функция all()\n",
+      "False\n",
+      "Функция sum()\n",
+      "-7\n",
+      "Функция min()\n",
+      "-10\n",
+      "Функция max()\n",
+      "8\n",
+      "Функции enumerate() и format()\n",
+      "0 -10\n",
+      "1 -7\n",
+      "2 -4\n",
+      "3 -1\n",
+      "4 2\n",
+      "5 5\n",
+      "6 8\n",
+      "Функции chr() и ord()\n",
+      "a\n",
+      "97\n"
+     ]
+    }
+   ],
    "source": [
     "start, stop, step = -10, 10, 3\n",
     "\n",
@@ -583,10 +657,10 @@
     "    def __init__(self, value):\n",
     "        self.value = value\n",
     "    @classmethod\n",
-    "    def print_name(cls):\n",
+    "    def print_name(self):\n",
     "        #self, Обычно относится к экземпляру класса.\n",
-    "        #cls, Вообще относится к классу.\"\"\"\n",
-    "        print(cls.__name__)\n",
+    "        #self, Вообще относится к классу.\"\"\"\n",
+    "        print(self.__name__)\n",
     "\n",
     "class ChildClass(SomeClass):\n",
     "    pass\n",
@@ -695,7 +769,11 @@
   {
    "cell_type": "markdown",
    "id": "d1e34b70",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## 10. Модули и пакеты\n",
     "\n",
@@ -723,7 +801,11 @@
   {
    "cell_type": "markdown",
    "id": "6e3d2cc1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## 12. ООП (Абстракция, Инкапсуляция, Наследование, Полиморфизм)"
    ]
@@ -731,7 +813,11 @@
   {
    "cell_type": "markdown",
    "id": "016712c7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## 13. Абстрактные классы, интерфейсы, магические методы\n"
    ]
@@ -739,7 +825,11 @@
   {
    "cell_type": "markdown",
    "id": "a91c9a3b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "\n",
     "## 14. Name mangling\n",
@@ -764,7 +854,11 @@
   {
    "cell_type": "markdown",
    "id": "40dd6fc7",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## 22. Исключения и работа с ними\n",
     "Обработка исключений поддерживается в Python посредством операторов `try`, `except`, `else`, `finally`, `raise`, образующих блок обработки исключения. В общем случае блок выглядит следующим образом:\n",
@@ -800,7 +894,11 @@
   {
    "cell_type": "markdown",
    "id": "3f80cd44",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## 23. Контекстный менеджер"
    ]
@@ -808,7 +906,11 @@
   {
    "cell_type": "markdown",
    "id": "c2c89805",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## 24. Итераторы, генераторы\n",
     "## 25. Виртуальное окружение, переменные окружения\n",
@@ -843,15 +945,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0b838272",
+   "cell_type": "markdown",
+   "id": "6ee8338b",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
     }
    },
-   "outputs": [],
    "source": [
     "from timeit import Timer\n",
     "\n",
@@ -881,7 +981,11 @@
   {
    "cell_type": "markdown",
    "id": "56d20ba8",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "Как и в любом языке программирования, в Python имеются свои приёмы оптимизации кода. Оптимизировать код можно исходя из различных (часто конкурирующих друг с другом) критериев (увеличение быстродействия, уменьшение объёма требуемой оперативной памяти, компактность исходного кода и т. д.). Чаще всего программы оптимизируют по времени исполнения.\n",
     "\n",
@@ -904,7 +1008,11 @@
   {
    "cell_type": "markdown",
    "id": "97da9ff1",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## 27. Сложность алгоритмов\n",
     "Вычислительная сложность алгоритмов\n",
@@ -930,7 +1038,11 @@
   {
    "cell_type": "markdown",
    "id": "9be2f7f6",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## 28. Отличия версий Python\n",
     "\n",
@@ -947,7 +1059,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "id": "74bfd538",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -968,7 +1084,11 @@
    "cell_type": "code",
    "execution_count": 7,
    "id": "0783559b",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -986,6 +1106,12 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8529520b",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## 29. Сборщик мусора, работа с памятью\n",
     "\n",
@@ -1030,16 +1156,16 @@
     "Зачем нам нужен дополнительный алгоритм, когда у нас уже есть подсчет ссылок?\n",
     "\n",
     "К сожалению, классический алгоритм подсчета ссылок имеет один большой недостаток — он не умеет находить циклические ссылки. Циклические ссылки происходят когда один или более объектов ссылаются на друг друга."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "d9ad3905",
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## 30. GIL\n",
     "\n",
@@ -1055,18 +1181,16 @@
     "## 34. ~~SOLID~~\n",
     "\n",
     "## 35. Тестирование, модули для тестрирования"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "33f01d02",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   },
    "source": [
     "## 30. GIL\n",
     "\n",
@@ -1088,7 +1212,11 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8524fe54",
-   "metadata": {},
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
    "outputs": [],
    "source": []
   }
